C06E05 Efraim or Lethalia teleport

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -961,17 +961,6 @@
 
 [event]
     name=last_breath
-    id=nfwm_doppelganger
-    first_time_only=no
-    [filter]
-        type=Lethalia_doppelganger,Efraim_doppelganger
-    [/filter]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Disipated" {NFW_COLOR_RED}}
-    {VARIABLE nfw_already_wound yes}
-[/event]
-
-[event]
-    name=last_breath
     id=nfw_delly_killed
     first_time_only=no
     [filter_condition]
@@ -1277,6 +1266,36 @@
             # no action
         [/option]
     [/message]
+[/event]
+#endif
+
+#ifdef CAMPAIGN_LEGEND_OF_THE_INVINCIBLES_PART_II
+[event]
+    name=last_breath
+    id=nfw_efraim_lethalia_teleport
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 05_Friends_No_More}
+    [/filter_condition]
+    [filter]
+        id=Lethalia_fake,Efraim_fake
+    [/filter]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Teleported" color="100,255,100"}
+    {VARIABLE nfw_already_wound yes}
+    {VARIABLE nfw_exclude_unit_id Lethalia_fake,Efraim_fake}
+[/event]
+#endif
+
+#ifdef LOTI_1_OR_2
+[event]
+    name=last_breath
+    id=nfwm_doppelganger
+    first_time_only=no
+    [filter]
+        type=Lethalia_doppelganger,Efraim_doppelganger
+    [/filter]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Disipated" {NFW_COLOR_RED}}
+    {VARIABLE nfw_already_wound yes}
 [/event]
 
 [event]
