--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -69,7 +69,7 @@
                                 value=0
                             [/set_variable]
                             [print]
-                                text=_"Activate Wounds"+" → "+_"Set to"+": 0"
+                                text=_"Activate Wounds"+" → "+_"Set to"+_": Yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -85,7 +85,7 @@
                                 value=1
                             [/set_variable]
                             [print]
-                                text=_"Activate Wounds"+" → "+_"Set to"+": 1"
+                                text=_"Activate Wounds"+" → "+_"Set to"+_": No"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -101,7 +101,7 @@
                                 value=2
                             [/set_variable]
                             [print]
-                                text=_"Activate Wounds"+" → "+_"Set to"+": 2"
+                                text=_"Activate Wounds"+" → "+_"Set to"+": "+_"No with plague losses"
                                 size=24
                                 duration=5000
                                 color=255,255,0
@@ -129,7 +129,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Float text"+" → "+_"Set to"+_": yes"
+                                text=_"Float text"+" → "+_"Set to"+_": Yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -145,7 +145,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Float text"+" → "+_"Set to"+_": no"
+                                text=_"Float text"+" → "+_"Set to"+_": No"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -173,7 +173,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Messages"+" → "+_"Set to"+_": yes"
+                                text=_"Messages"+" → "+_"Set to"+_": Yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -189,7 +189,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Messages"+" → "+_"Set to"+_": no"
+                                text=_"Messages"+" → "+_"Set to"+_": No"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -319,7 +319,7 @@
                                 value=0
                             [/set_variable]
                             [print]
-                                text=_"Activate Death"+" → "+_"Set to"+": 0"
+                                text=_"Activate Death"+" → "+_"Set to"+_": No"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -335,7 +335,7 @@
                                 value=1
                             [/set_variable]
                             [print]
-                                text=_"Activate Death"+" → "+_"Set to"+": 1"
+                                text=_"Activate Death"+" → "+_"Set to"+": "+_"Death"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -351,7 +351,7 @@
                                 value=2
                             [/set_variable]
                             [print]
-                                text=_"Activate Death"+" → "+_"Set to"+": 2"
+                                text=_"Activate Death"+" → "+_"Set to"+": "+_"Death, Undeath and Ghosts"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -391,7 +391,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Elementals"+" → "+_"Set to"+_": yes"
+                                text=_"Elementals"+" → "+_"Set to"+_": Yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -407,7 +407,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Elementals"+" → "+_"Set to"+_": no"
+                                text=_"Elementals"+" → "+_"Set to"+_": No"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -489,7 +489,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Funny wounds"+" → "+_"Set to"+_": yes"
+                                text=_"Funny wounds"+" → "+_"Set to"+_": Yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -505,7 +505,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Funny wounds"+" → "+_"Set to"+_": no"
+                                text=_"Funny wounds"+" → "+_"Set to"+_": No"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -547,7 +547,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Wounds healing"+" → "+_"Set to"+_": yes"
+                                text=_"Wounds healing"+" → "+_"Set to"+_": Yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -563,7 +563,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Wounds healing"+" → "+_"Set to"+_": no"
+                                text=_"Wounds healing"+" → "+_"Set to"+_": No"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -679,7 +679,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"AMLA switch menu"+" → "+_"Set to"+_": yes"
+                                text=_"AMLA switch menu"+" → "+_"Set to"+_": Yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -698,7 +698,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"AMLA switch menu"+" → "+_"Set to"+_": no"
+                                text=_"AMLA switch menu"+" → "+_"Set to"+_": No"
                                 size=24
                                 duration=5000
                                 color=255,0,0
