C06E08 Efraim or Lethalia teleport

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -1276,6 +1276,9 @@
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL current_scenario_id equals 05_Friends_No_More}
+        [or]
+            {VARIABLE_CONDITIONAL current_scenario_id equals 08_Misguiding_Lives}
+        [/or]
     [/filter_condition]
     [filter]
         id=Lethalia_fake,Efraim_fake
