LOTI C06E13 Phoenix captured
Also added petrified to cleaning status just in case

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -1287,6 +1287,19 @@
     {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_exclude_unit_id Lethalia_fake,Efraim_fake}
 [/event]
+[event]
+    name=last_breath
+    id=nfw_phoenix
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 13_Phoenix}
+    [/filter_condition]
+    [filter]
+        type=Phoenix
+    [/filter]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Captured" color="100,255,100"}
+    {VARIABLE nfw_already_wound yes}
+[/event]
 #endif
 
 #ifdef LOTI_1_OR_2
