--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -662,6 +662,7 @@ This does not apply to any unit that the objectives require you to keep alive. E
                     {VARIABLE this_item.hitpoints $this_item.max_hitpoints}
                     {VARIABLE this_item.status.poisoned "no"}
                     {VARIABLE this_item.status.slowed "no"}
+                    {VARIABLE this_item.status.petrified "no"}
                     [unstore_unit]
                         variable=this_item
                         x,y=recall,recall
