LOTI C06E14 Phoenix captured
Also renamed some wounds

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -754,7 +754,7 @@
             status=thirdrecall
         [/and]
     [/filter]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Disipated" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Disipation" {NFW_COLOR_RED}}
     {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_exclude_unit_id $unit.id}
 [/event]
@@ -783,7 +783,7 @@
     [filter]
         id=Reficul
     [/filter]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Banished" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Banish" {NFW_COLOR_RED}}
     {VARIABLE nfw_already_wound yes}
 [/event]
 
@@ -813,7 +813,7 @@
             type=EoMa_Master_of_Fire
         [/or]
     [/filter]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Vanished" color="0,255,255"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Vanish" color="0,255,255"}
     {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_already_vanished $unit.id}
 [/event]
@@ -908,7 +908,7 @@
     [filter]
         canrecruit=yes
     [/filter]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Enslaved" color="100,255,100"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Enslave" color="100,255,100"}
 [/event]
 
 [event]
@@ -924,7 +924,7 @@
     [filter_second]
         id=Lethalia
     [/filter_second]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Captured" color="100,255,100"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Capture" color="100,255,100"}
     {VARIABLE nfw_already_wound yes}
 [/event]
 
@@ -938,7 +938,7 @@
     [filter]
         id=Umbra_illusion
     [/filter]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Vanished" color="100,255,100"}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Vanish" color="0,255,255"}
     {VARIABLE nfw_already_wound yes}
 [/event]
 
@@ -955,7 +955,7 @@
     [filter]
         id=Shiva,Zambag,Lotor,Ghargalla,Tholor,Ghar`drias,Undoloria,Gar`landak,Ghambar,Khar_dhas,Emraldhor,Amgharth,Ufa,Durandia
     [/filter]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Raised" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Raise" {NFW_COLOR_RED}}
     {VARIABLE nfw_already_wound yes}
 [/event]
 
@@ -1108,7 +1108,7 @@
     [filter]
         id=Akula
     [/filter]
-    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Teleported" color="100,255,100"}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Teleport" color="100,255,100"}
     {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_exclude_unit_id Akula}
 [/event]
@@ -1283,7 +1283,7 @@
     [filter]
         id=Lethalia_fake,Efraim_fake
     [/filter]
-    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Teleported" color="100,255,100"}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Teleport" color="100,255,100"}
     {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_exclude_unit_id Lethalia_fake,Efraim_fake}
 [/event]
@@ -1297,7 +1297,20 @@
     [filter]
         type=Phoenix
     [/filter]
-    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Captured" color="100,255,100"}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Capture" color="100,255,100"}
+    {VARIABLE nfw_already_wound yes}
+[/event]
+[event]
+    name=last_breath
+    id=nfw_solid_phoenix
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 14_Frozen_Land}
+    [/filter_condition]
+    [filter]
+        type=Solid Phoenix
+    [/filter]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Destruction" {NFW_COLOR_RED}}
     {VARIABLE nfw_already_wound yes}
 [/event]
 #endif
@@ -1310,7 +1323,7 @@
     [filter]
         type=Lethalia_doppelganger,Efraim_doppelganger
     [/filter]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Disipated" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Disipation" {NFW_COLOR_RED}}
     {VARIABLE nfw_already_wound yes}
 [/event]
 
