New wound (LOTI) Redemption

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -5,7 +5,6 @@
     name=last_breath
     id=nfwme_store_variables
     first_time_only=no
-    {CLEAR_VARIABLE nfw_unit_type,nfw_second_unit_type,nfw_weapon_type,nfw_scary_weapon,nfw_scary_weapon_translated}
     {VARIABLE nfw_weapon_type $second_weapon.type}
     {VARIABLE nfw_scary_weapon $second_weapon.name}
     {VARIABLE nfw_scary_weapon_translated $second_weapon.description}
@@ -19,46 +18,19 @@
     [/store_unit_type]
 [/event]
 
-# Avoid units to advance when have X+/X experience and receives an advancement included on the wound, covering cases with and without previous advancements
+#ifdef LOTI_1_OR_2
+# Redeem from LOTI
 [event]
     name=last_breath
-    id=nfwm_over_max_exp
+    id=nfw_redeem
     first_time_only=no
-    [filter]
-        formula="experience >= max_experience"
-    [/filter]
-    [if]
-        [have_location]
-            {EVENT_UNIT}
-            [filter]
-                [filter_wml]
-                    [advancement]
-                        glob_on_id=*
-                    [/advancement]
-                [/filter_wml]
-            [/filter]
-        [/have_location]
-        [or]
-            {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
-            [and]
-                {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
-            [/and]
-        [/or]
-        [then]
-            {NFW_short_term_memory_loss_WOUND}
-            {VARIABLE nfw_already_wound yes}
-        [/then]
-        [else]
-            [modify_unit]
-                {FILTER_EVENT_UNIT}
-                [effect]
-                    apply_to=experience
-                    set=0
-                [/effect]
-            [/modify_unit]
-        [/else]
-    [/if]
+    [filter_condition]
+        {VARIABLE_CONDITIONAL redeemed greater_than_equal_to 1}
+    [/filter_condition]
+    {NFW_redeemed_WOUND}
+    {VARIABLE nfw_already_wound yes}
 [/event]
+#endif
 
 # necromancy ability or similar
 [event]
@@ -184,6 +156,47 @@
     [/filter]
     {NFW_plagued_WOUND}
     {VARIABLE nfw_already_wound yes}
+[/event]
+
+# Avoid units to advance when have X+/X experience and receives an advancement included on the wound, covering cases with and without previous advancements
+[event]
+    name=last_breath
+    id=nfwm_over_max_exp
+    first_time_only=no
+    [filter]
+        formula="experience >= max_experience"
+    [/filter]
+    [if]
+        [have_location]
+            {EVENT_UNIT}
+            [filter]
+                [filter_wml]
+                    [advancement]
+                        glob_on_id=*
+                    [/advancement]
+                [/filter_wml]
+            [/filter]
+        [/have_location]
+        [or]
+            {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
+            [and]
+                {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
+            [/and]
+        [/or]
+        [then]
+            {NFW_short_term_memory_loss_WOUND}
+            {VARIABLE nfw_already_wound yes}
+        [/then]
+        [else]
+            [modify_unit]
+                {FILTER_EVENT_UNIT}
+                [effect]
+                    apply_to=experience
+                    set=0
+                [/effect]
+            [/modify_unit]
+        [/else]
+    [/if]
 [/event]
 
 # filter heroes
