--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -67,6 +67,19 @@
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Destruction" {NFW_COLOR_RED}}
 #enddef
 
+#define NFW_redeemed_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [trait]
+            id=nfw_redeem
+            male_name="<span color='#DA0000'>"+_"redeemed"+"</span>"
+            female_name="<span color='#DA0000'>"+_"female^redeemed"+"</span>"
+        [/trait]
+    [/modify_unit]
+
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Redemption" {NFW_COLOR_RED}}
+#enddef
+
 #define NFW_retreat_WOUND
     [modify_unit]
         {FILTER_EVENT_UNIT}
