--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -374,7 +374,7 @@
             [have_location]
                 {EVENT_UNIT}
                 [filter]
-                    trait=nfw_consumed
+                    trait=nfw_consumed,nfw_redeem
                 [/filter]
             [/have_location]
             [then]
@@ -622,7 +622,7 @@
                 [have_location]
                     {EVENT_UNIT}
                     [filter]
-                        trait=nfw_dead,nfw_plagued,nfw_consumed
+                        trait=nfw_dead,nfw_plagued,nfw_consumed,nfw_redeem
                     [/filter]
                 [/have_location]
             [/not]
@@ -674,7 +674,7 @@ This does not apply to any unit that the objectives require you to keep alive. E
     [/foreach]
     # kill already dead units
     [kill]
-        trait=nfw_dead,nfw_plagued,nfw_consumed
+        trait=nfw_dead,nfw_plagued,nfw_consumed,nfw_redeem
     [/kill]
     {CLEAR_VARIABLE nfw_wounded,nfw_alive_units}
 [/event]
