Added eoma_soul_catcher id to future compatibility

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -70,7 +70,7 @@
         [/not]
     [/filter]
     [filter_second]
-        ability=soul_catcher
+        ability=soul_catcher,eoma_soul_catcher
     [/filter_second]
     [filter_condition]
         {VARIABLE_CONDITIONAL nfwe_wounds not_equals 1}
