New option: Undeath+Ghost only with undead present

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -19,6 +19,10 @@
     {VARIABLE_CONDITIONAL nfwe_deadundead equals 2}
 #enddef
 
+#define NFW_undead_conditional_ENABLED
+    {VARIABLE_CONDITIONAL nfwe_deadundead equals 3}
+#enddef
+
 #define NFW_funny_ENABLED
     {VARIABLE_CONDITIONAL nfwe_funny equals yes}
 #enddef
