--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -23,7 +23,7 @@
         id=nfw_02
         default=0
         name=_"Enable Death"
-        description=_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."+" "+_"Only applies with Wounds enabled."
+        description=_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."+" "+_"You can choose if you want undead or ghosts only if there is any undead present on the scenario."+" "+_"Only applies with Wounds enabled."
         [item]
             name=_"No"
             value=0
@@ -35,6 +35,10 @@
         [item]
             name=_"Undeath"
             value=2
+        [/item]
+        [item]
+            name=_"Undeath only with undead"
+            value=3
         [/item]
     [/choice]
 
