--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -465,7 +465,25 @@
             value=5,6
             [if]
                 {NFW_undead_ENABLED}
-                [and]
+                [not]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            race=undead,eoma_magical
+                            [or]
+                                trait=elemental,undead,magical
+                            [/or]
+                        [/filter]
+                    [/have_location]
+                [/not]
+                [or]
+                    {NFW_undead_conditional_ENABLED}
+                    [have_unit]
+                        race=undead
+                        [or]
+                            trait=undead
+                        [/or]
+                    [/have_unit]
                     [not]
                         [have_location]
                             {EVENT_UNIT}
@@ -477,7 +495,7 @@
                             [/filter]
                         [/have_location]
                     [/not]
-                [/and]
+                [/or]
                 [then]
                     {NFW_undead_corpse_WOUND}
                     {VARIABLE nfw_already_wound yes}
@@ -494,7 +512,24 @@
                 {NFW_undead_ENABLED}
                 {VARIABLE_CONDITIONAL nfw_unit_type.movement_type not_equals undeadspirit}
                 {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_magical}
-                [and]
+                [not]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            trait=ghost_trait,undead,elemental,magical
+                        [/filter]
+                    [/have_location]
+                [/not]
+                [or]
+                    {NFW_undead_conditional_ENABLED}
+                    {VARIABLE_CONDITIONAL nfw_unit_type.movement_type not_equals undeadspirit}
+                    {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_magical}
+                    [have_unit]
+                        race=undead
+                        [or]
+                            trait=undead
+                        [/or]
+                    [/have_unit]
                     [not]
                         [have_location]
                             {EVENT_UNIT}
@@ -503,7 +538,7 @@
                             [/filter]
                         [/have_location]
                     [/not]
-                [/and]
+                [/or]
                 [then]
                     {NFW_undead_ghost_WOUND {TRAIT_UNDEAD}}
                     {VARIABLE nfw_already_wound yes}
@@ -512,7 +547,36 @@
                     {NFW_undead_ENABLED}
                     {VARIABLE_CONDITIONAL nfw_unit_type.movement_type not_equals undeadspirit}
                     {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_magical}
-                    [and]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            trait=undead
+                        [/filter]
+                    [/have_location]
+                    [not]
+                        [have_location]
+                            {EVENT_UNIT}
+                            [filter]
+                                trait=ghost_trait,elemental,magical
+                            [/filter]
+                        [/have_location]
+                    [/not]
+                    [or]
+                        {NFW_undead_conditional_ENABLED}
+                        {VARIABLE_CONDITIONAL nfw_unit_type.movement_type not_equals undeadspirit}
+                        {VARIABLE_CONDITIONAL nfw_unit_type.race not_equals eoma_magical}
+                        [have_unit]
+                            race=undead
+                            [or]
+                                trait=undead
+                            [/or]
+                        [/have_unit]
+                        [have_location]
+                            {EVENT_UNIT}
+                            [filter]
+                                trait=undead
+                            [/filter]
+                        [/have_location]
                         [not]
                             [have_location]
                                 {EVENT_UNIT}
@@ -521,15 +585,7 @@
                                 [/filter]
                             [/have_location]
                         [/not]
-                    [/and]
-                    [and]
-                        [have_location]
-                            {EVENT_UNIT}
-                            [filter]
-                                trait=undead
-                            [/filter]
-                        [/have_location]
-                    [/and]
+                    [/or]
                     [then]
                         {NFW_undead_ghost_WOUND {NFW_TRAIT_UNDEAD}}
                         {VARIABLE nfw_already_wound yes}
