--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -290,10 +290,10 @@
 #define NFW_DEATH STATUS
     [message]
         speaker=narrator
-        message="<b>"+_"Activate Death"+" → "+"</b>"+_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."+" "+_"Only applies with Wounds enabled."+"
+        message="<b>"+_"Activate Death"+" → "+"</b>"+_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."+" "+_"You can choose if you want undead or ghosts only if there is any undead present on the scenario."+" "+_"Only applies with Wounds enabled."+"
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
- "+_"(<span color='#00FFFF'>0</span> = Deactivated, <span color='#00FFFF'>1</span> = Death, <span color='#00FFFF'>2</span> = Death + Undeath)"+"
+ "+_"(<span color='#00FFFF'>0</span> = Deactivated, <span color='#00FFFF'>1</span> = Death, <span color='#00FFFF'>2</span> = Death + Undeath), <span color='#00FFFF'>3</span> = Death + Undeath only with undead)"+"
 
 "+_"<b>Wounds list:</b>
 * <b><i>Death</i></b>: Definitive death, 33% chance - 20% with Undeath active - 66% kamikaze units
@@ -336,6 +336,22 @@
                             [/set_variable]
                             [print]
                                 text=_"Activate Death"+" → "+_"Set to"+": "+_"Death, Undeath and Ghosts"
+                                size=24
+                                duration=5000
+                                color=0,255,0
+                            [/print]
+                        [/command]
+                    [/option]
+                    [option]
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate Death, but Undeath and Ghosths only with undead present"+"</i>"
+                        [command]
+                            [set_variable]
+                                name=nfwe_deadundead
+                                value=3
+                            [/set_variable]
+                            [print]
+                                text=_"Activate Death"+" → "+_"Set to"+": "+_"Death, Undeath and Ghosts (undead only)"
                                 size=24
                                 duration=5000
                                 color=0,255,0
