New option: Send to recall list at end of turn

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -39,6 +39,10 @@
     {VARIABLE_CONDITIONAL nfwe_elemental equals no}
 #enddef
 
+#define NFW_turn_recall_ENABLED
+    {VARIABLE_CONDITIONAL nfwe_turn_recall equals yes}
+#enddef
+
 #define EVENT_UNIT
     x,y=$x1,$y1
 #enddef
