--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -19,6 +19,13 @@
         [/item]
     [/choice]
 
+    [checkbox]
+        id=nfw_06
+        name=_"Send to recall list at end of turn"
+        description=_"Units will be sent to the recall list when all of the sides' turns are over instead of at the end of the scenario. Useful for single scenario games."
+        default=no
+    [/checkbox]
+
     [choice]
         id=nfw_02
         default=0
@@ -85,6 +92,10 @@
     [set_variable]
         name=nfwe_elemental
         to_variable=nfw_05
+    [/set_variable]
+    [set_variable]
+        name=nfwe_turn_recall
+        to_variable=nfw_06
     [/set_variable]
     [set_variable]
         name=nfw_options_first
