--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -38,15 +38,16 @@
     [/option]
 #enddef
 
-#define NFW_WOUNDS STATUS FLOAT MESSAGE
+#define NFW_WOUNDS STATUS FLOAT MESSAGE RECALL
     [message]
         speaker=narrator
-        message="<b>"+_"Activate Wounds"+" → "+"</b>"+_"Activate or deactivate random wounds. If you deactivate, the units will return to recall list unchanged on the next scenario (except in special cases). If you choose to allow lose plagued units, they will disappear forever, since they were converted by the enemy. An optional floating text and a message from the unit or narrator will indicate the wound received and help, if applicable."+"
+        message="<b>"+_"Activate Wounds"+" → "+"</b>"+_"Activate or deactivate random wounds. If you deactivate, the units will return to recall list unchanged (except for special cases) on the next scenario or at the end of all the sides' turns, at your choice. If you choose to allow lose plagued units, they will disappear forever, since they were converted by the enemy. An optional floating text and a message from the unit or narrator will indicate the wound received and help, if applicable."+"
 
 "+_"Note: You can disable wounds along with any combination of activated optional wounds. It will be decided randomly with the same percentage chance as if you had normal wounds activated. Units that do not receive any optional or scripted wounds will return to the recall list unchanged."+"
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
  "+_"(<span color='#00FFFF'>0</span> = Activated, <span color='#00FFFF'>1</span> = Deactivated, <span color='#00FFFF'>2</span> = Deactivated but with plague losses)"+"
+<b><span color='#00E600'>"+_"Send to recall every turn"+": "+"</span><span color='#00FFFF'>"+"{RECALL}"+"</span></b>
 <b><span color='#00E600'>"+_"Float text"+": "+"</span><span color='#00FFFF'>"+"{FLOAT}"+"</span></b>
 <b><span color='#00E600'>"+_"Messages"+": "+"</span><span color='#00FFFF'>"+"{MESSAGE}"+"</span></b>"
         side_for=$side_number
@@ -105,6 +106,50 @@
                                 size=24
                                 duration=5000
                                 color=255,127,0
+                            [/print]
+                        [/command]
+                    [/option]
+                    {NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
+        [option]
+            image=misc/nfw-arrow.png
+            label=_"Change frequency of send to recall list"
+            [command]
+                [message]
+                    speaker=narrator
+                    message=_"Set the frequency of sending to recall list, at the end of each scenario, or at the end of each turn."
+                    image="misc/nfw-icon.png"
+                    [option]
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"End of scenario"+"</i>"
+                        [command]
+                            [set_variable]
+                                name=nfwe_turn_recall
+                                value=no
+                            [/set_variable]
+                            [print]
+                                text=_"Send to recall list"+" → "+_"Set to"+": "+_"Scenario"
+                                size=24
+                                duration=5000
+                                color=0,255,255
+                            [/print]
+                        [/command]
+                    [/option]
+                    [option]
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"End of turn"+"</i>"
+                        [command]
+                            [set_variable]
+                                name=nfwe_turn_recall
+                                value=yes
+                            [/set_variable]
+                            [print]
+                                text=_"Send to recall list"+" → "+_"Set to"+": "+_"Turn"
+                                size=24
+                                duration=5000
+                                color=0,255,255
                             [/print]
                         [/command]
                     [/option]
@@ -759,7 +804,7 @@
             image="misc/nfw-wounds.png"
             label=_"Wounds"
             [command]
-                {NFW_WOUNDS $nfwe_wounds $nfwe_float_text $nfw_dialog_manual}
+                {NFW_WOUNDS $nfwe_wounds $nfwe_float_text $nfw_dialog_manual $nfwe_turn_recall}
             [/command]
         [/option]
         [option]
