--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -640,6 +640,48 @@ This does not apply to any unit that the objectives require you to keep alive. E
     [/if]
 [/event]
 
+[event]
+    name=turn refresh
+    id=nfw_turn_unstore
+    first_time_only=no
+    [filter_condition]
+        {NFW_turn_recall_ENABLED}
+    [/filter_condition]
+    [store_unit]
+        [filter]
+        [/filter]
+        variable=nfw_alive_units
+    [/store_unit]
+    [foreach]
+        array=nfw_wounded
+        [do]
+            [if]
+                [have_unit]
+                    id=$this_item.id
+                    find_in=nfw_alive_units
+                    search_recall_list=yes
+                [/have_unit]
+                [else]
+                    {VARIABLE this_item.hitpoints $this_item.max_hitpoints}
+                    {VARIABLE this_item.status.poisoned "no"}
+                    {VARIABLE this_item.status.slowed "no"}
+                    {VARIABLE this_item.status.petrified "no"}
+                    [unstore_unit]
+                        variable=this_item
+                        x,y=recall,recall
+                        advance=no
+                    [/unstore_unit]
+                [/else]
+            [/if]
+        [/do]
+    [/foreach]
+    # kill already dead units
+    [kill]
+        trait=nfw_dead,nfw_plagued,nfw_consumed,nfw_redeem
+    [/kill]
+    {CLEAR_VARIABLE nfw_wounded,nfw_alive_units}
+[/event]
+
 # In multiplayer the victory event is synchronized since 1.13.10
 [event]
     name=victory
