--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -335,7 +335,7 @@
 #define NFW_DEATH STATUS
     [message]
         speaker=narrator
-        message="<b>"+_"Activate Death"+" → "+"</b>"+_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."+" "+_"You can choose if you want undead or ghosts only if there is any undead present on the scenario."+" "+_"Only applies with Wounds enabled."+"
+        message="<b>"+_"Activate Death"+" → "+"</b>"+_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."+" "+_"You can choose if you want undead or ghosts only if there is any undead present on the scenario."+"
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
  "+_"(<span color='#00FFFF'>0</span> = Deactivated, <span color='#00FFFF'>1</span> = Death, <span color='#00FFFF'>2</span> = Death + Undeath), <span color='#00FFFF'>3</span> = Death + Undeath only with undead)"+"
