Fix schema, quote just in case

--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -3210,7 +3210,7 @@ Movement -20% and accuracy -15%"
 #define NFW_undead_corpse_WOUND
     [set_variable]
         name=zombie_swimming
-        min=$unit.movement_costs.deep_water, 4
+        min="$unit.movement_costs.deep_water,4"
     [/set_variable]
     [modify_unit]
         {FILTER_EVENT_UNIT}
